--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@
 /* HEADER */
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__info/header__info.css);
 
 /* PROFILE */
 @import url(./blocks/profile/profile.css);
